test/compile-fail/resolution/use/no-name-root-path/expected.txt
error: unresolved crate `c`
  ┌─ ./test/compile-fail/resolution/use/no-name-root-path/top.rhdl:6:15
  │
6 │         use ::c::d;
  │               ^ no `c` crate

